--- a/assignment03.Rmd
+++ b/assignment03.Rmd
@@ -7,22 +7,55 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, message=FALSE, results='hide'}
+library(tidyverse)
+library(ggplot2)
+library(haven)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+school2018 <- read_sas("schools.sas7bdat")
+school1 <- select(.data=school2018,unitid,state_cd,sector_cd,EFMaleCount,EFFemaleCount,EFTotalCount,TOTAL_EXPENSE_ALL,TOTAL_REVENUE_ALL,Sports)
+sports <- count(school1,Sports)
+sports <- filter(sports,n>1200)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+ggplot(sports,mapping = aes(Sports,n))+
+  geom_col(fill="darkgreen")+
+  coord_flip()+
+  ylab("Number of clubs")+
+  theme_light(base_size = 12)
+```
+
+```{r}
+state <- count(school1,state_cd)
+arrange(.data = state, desc(n)) 
+state2 <- school1[which(school1$state_cd%in% c('CA')), ]
+```
+
+```{r}
+ggplot(data = state2, mapping = aes(x = TOTAL_EXPENSE_ALL, y = TOTAL_REVENUE_ALL)) +
+  geom_point(colour = "darkgreen") +
+  geom_smooth(color="orange")+
+  ylab("Total revenue of clubs in California")+
+  xlab("Total expnese of clubs in California")
+```
+
+```{r}
+sailing <- school1[which(school1$Sports%in% c('Sailing')), ]
+ggplot(sailing) +
+  geom_segment( aes(x=state_cd, xend=state_cd, y=EFMaleCount, yend=EFFemaleCount), color="grey") +
+  geom_point( aes(x=state_cd, y=EFMaleCount),color=rgb(0.2,0.7,0.1,0.5), size=2 ) +
+  geom_point( aes(x=state_cd,y=EFFemaleCount),color=rgb(0.7,0.2,0.1,0.5), size=2 ) +
+  coord_flip()+
+  xlab("State") +
+  ylab("Number of People")
+```
+
+```{r}
+ggplot(sailing,aes(x=state_cd, y=EFTotalCount, fill=state_cd)) +
+  geom_boxplot()+
+  xlab("State")+
+  ylab("Total amount of people")
+```
